tests/baselines/reference/restParametersOfNonArrayTypes.errors.txt
==== tests/cases/compiler/restParametersOfNonArrayTypes.ts (14 errors) ====
    // Rest parameters must be an array type if they have a type annotation, so all these are errors
    
    function foo(...x: string) { }
                 ~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    var f = function foo(...x: number) { }
                         ~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    var f2 = (...x: Date, ...y: boolean) => { }
              ~~~~~~~~~~
!!! error TS1014: Rest parameter must be last in list.
                          ~~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    
    class C {
        foo(...x: C) { }
            ~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }
    
    interface I {
        (...x: string);
         ~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        foo(...x: number, ...y: number);
            ~~~~~~~~~~~~
!!! error TS1014: Rest parameter must be last in list.
                          ~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }
    
    var a: {
        (...x: string);
         ~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        foo(...x: string);
            ~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }
    
    var b = {
        foo(...x: string) { },
            ~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        a: function foo(...x: number, ...y: Date) { },
                        ~~~~~~~~~~~~
!!! error TS1014: Rest parameter must be last in list.
                                      ~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
        b: (...x: string) => { }
            ~~~~~~~~~~~~
!!! error TS2162: Rest parameters must be array types.
    }